# spherical-wrist

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release-artifacts.yml  release.yml
docs/: api-reference.md  concepts.md  development-maturin.md  index.md  installation.md  jacobian.md  meshes-and-collisions.md  path-planning.md  quickstart.md  robots.md  transforms-and-units.md  troubleshooting.md  visualization.md
python/examples/: README.md  _common.py  basic.py  basic_readme.py  cartesian_stroke.py  complete_visible_robot.py  constraints.py  frame.py  jacobian.py  parallelogram.py  path_planning_rrt.py  readme_intro.py  tool_and_base.py
python/spherical_wrist/: __init__.py  _internal.pyi
python/tests/: test_constraints.py  test_error_boundaries.py  test_intro_api.py  test_jacobian.py  test_kinematics_trait.py  test_kinematics_with_shape.py  test_mesh.py  test_path_plan.py  test_visualization.py
scripts/: check_release_artifacts.py
src/: annotated_joints.rs  cartesian_planner.rs  constraints.rs  frame.rs  helpers.rs  jacobian.rs  kinematic_model.rs  kinematics_with_shape.rs  lib.rs  mesh.rs  parallelogram.rs  robot.rs  rrt_planner.rs  safety_distances.rs  visualization.rs
