[package]
name = "spherical-wrist"
version = "0.1.0"
edition = "2024"

[lib]
name = "spherical_wrist"
crate-type = ["cdylib"]

[dependencies]
glam = "=0.30.10"
parry3d = "0.26"
pyo3 = "0.27"
rs-opw-kinematics = { version = "2.0.0", default-features = false, features = ["stroke_planning", "visualization"] }
rs-read-trimesh = { version = "2.0.9", default-features = false, features = ["use-parry-26"]  }